Face snapping doesn't work properly #41191

Closed
opened 2014-07-26 13:36:46 +02:00 by Lubomir Cenovsky · 13 comments

System Information
Ubuntu 14.04
GXT 680

Blender Version
Broken: 2.71 51120ef
Worked: 2.71 official

Short description of error
Face snapping doesn't work properly. If I have two parts of mesh, and I want to snap one to the other by using face snapping it doesn't work. If I separate one part in new object, then face snapping works correctly.

Exact steps for others to reproduce the error
Open default scene. Delete Cube and add UV Sphere for example. Select Sphere and enter editmode. In edit mode add Plane, subdivide it couple times, enable face snapping, enable snapping to it self, activate grad/move action, press Ctrl to snap ... and it doesn't work. If I select the Plane, separate in new object, then in edit mode of that Plane everithing behaves how it should.

**System Information** Ubuntu 14.04 GXT 680 **Blender Version** Broken: 2.71 51120ef Worked: 2.71 official **Short description of error** Face snapping doesn't work properly. If I have two parts of mesh, and I want to snap one to the other by using face snapping it doesn't work. If I separate one part in new object, then face snapping works correctly. **Exact steps for others to reproduce the error** Open default scene. Delete Cube and add UV Sphere for example. Select Sphere and enter editmode. In edit mode add Plane, subdivide it couple times, enable face snapping, enable snapping to it self, activate grad/move action, press Ctrl to snap ... and it doesn't work. If I select the Plane, separate in new object, then in edit mode of that Plane everithing behaves how it should.

Changed status to: 'Open'

Changed status to: 'Open'

Added subscriber: @LubomirCenovsky

Added subscriber: @LubomirCenovsky

Added subscriber: @mont29

Added subscriber: @mont29

Works for me on latest master… Please attach a .blend file (always simple to reproduce the issue, even when steps are simple and clear).

Also, you say:

enable face snapping, enable snapping to it self, activate grad/move action, press Ctrl to snap

Which won't work, either you do not enable snapping and use ctrl to activate it, or you do enable snapping, and then ctrl will disable it…

Works for me on latest master… Please attach a .blend file (always simple to reproduce the issue, even when steps are simple and clear). Also, you say: > enable face snapping, enable snapping to it self, activate grad/move action, press Ctrl to snap Which won't work, either you **do not** enable snapping and use `ctrl` to activate it, or you do enable snapping, and then `ctrl` will **disable** it…

Hi,
I'm sorry if my description is not clear ... english isn't my native language.

Enyway I attach scene where in Blender version mentioned in description, when I activate grab + Ctrl, then nothing happens, but in official release everithing works just fine.

face_snapping.blend

Hi, I'm sorry if my description is not clear ... english isn't my native language. Enyway I attach scene where in Blender version mentioned in description, when I activate grab + Ctrl, then nothing happens, but in official release everithing works just fine. [face_snapping.blend](https://archive.blender.org/developer/F99809/face_snapping.blend)

Added subscriber: @Sergey

Added subscriber: @Sergey

Can indeed see the difference in behavior.

@mont29, mind having a check here? :)

Can indeed see the difference in behavior. @mont29, mind having a check here? :)
Bastien Montagne self-assigned this 2014-07-28 14:16:55 +02:00

Yep, can confirm the issue, in Ortho view only though, this projection is really a pita for snapping :/

Yep, can confirm the issue, in Ortho view only though, this projection is really a pita for snapping :/

This issue was referenced by c4b47b89f7

This issue was referenced by c4b47b89f76d259792b3a8f0f9b6718668996000

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'

Closed by commit c4b47b89f7.

Closed by commit c4b47b89f7.

This issue was referenced by bacdfc70e2

This issue was referenced by bacdfc70e2109711eeecef122cf408e6803990ca

This issue was referenced by 5ca59f7134

This issue was referenced by 5ca59f7134690027632ea60d2259585cd2b1c97d
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
4 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#41191
No description provided.